# plecs

Simulation of Power Electronics Converters Using PLECS/: book.txt
Simulation of Power Electronics Converters Using PLECS/chapter2/: 2_1 Resistive voltage divider.plecs  2_2 RC circuit analysis.plecs
Simulation of Power Electronics Converters Using PLECS/chapter3/: 3_1 mosfet with resistive load.plecs  3_4 single-phase full-wave controlled rectifier.plecs  3_6 boost converter.plecs  3_8 mutual inductance.plecs  R50.trace
hybrid-inverter/: my_three_phase_t_type_inverter.plecs
mathematica/: ep1.nb  pid-design.nb
modules/lab2_boost/Boost双环PI控制/: 1_boost_v_loop.nb  1_boost_v_loop.plecs  1_boost_v_loop_data.csv  2_boost_i_loop_data.csv  2_boost_i_loop_data.plecs  3_boost_vi_loop_data.nb  3_boost_vi_loop_data.plecs
notes/PLECS10_buck-pi/: Buck电路PI控制器参数动画演示.nb  开环Buck电路仿真.plecs  闭环Buck电路仿真.plecs  闭环Buck电路仿真.plecs.autosave
notes/PLECS11_buck-pi-math/: data.csv
notes/PLECS21_c-script-rw-data/: data.mat  text.plecs
notes/PLECS22_c-script-control/: PhaseShift.plecs
notes/PLECS23_c-script-control-full-bridge/: data.csv  移相全桥变换器闭环控制器设计.nb
notes/PLECS24_discrete-control/: PhaseShift.plecs
notes/PLECS43_dll/p44/: dllmain.c  (+2 more)
notes/PLECS4_steady-state-analysis/: Buck稳态分析3.plecs
notes/PLECS55_1phase_inv/: 1phase-inv.plecs  1phase.nb  data.csv
notes/PLECS58_3phase_inv/: calculate-kpki.nb
notes/PLECS5_small signal_analysis/: ep1.plecs
notes/PLECS9_buck-bode/: buck-close-loop.plecs
pil/dll-cmake/: CMakeLists.txt
pil/dll-cmake/app/: CMakeLists.txt  app.c
pil/dll-cmake/lib/: CMakeLists.txt  lib.c  lib.h
pil/dll-cmake/module/: CMakeLists.txt
pil/dll-cmake/module/lininterp/: CMakeLists.txt  lininterp.c
pil/dll-cmake/module/lininterp/inc/: DllHeader.h
plecsStudy/mathematica/: Mathematica官方中文入门教程.nb
plecsStudy/notes/PLECS43_dll/p45/: CMakeLists.txt
video/: video.txt
(+141 files in other folders)
